--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <p>Привет Мир!</p>
+    <p>Привет Мир!!!</p>
 
     <!-- <script>
         alert('Всё отлично');
     </script> -->
-    <script src="js/script.js"> </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
