--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!-- <script>
         alert('Всё отлично');
     </script> -->
-    <script src="js/script.js"></script>
+    <script src="js/learn.js"></script>
 </body>
 </html>
